--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@ body {
     height: 600px;
     position: relative;
     border: 8px solid #d4b484;
+    background:#9b7a52;
 }
 
 .screen {
@@ -40,16 +41,24 @@ body {
     display: flex;
 }
 
-.pixel-btn {
-    padding: 12px 20px;
-    margin: 12px;
-    background: #7a5f41;
-    border: 4px solid #d4b484;
-    color: #fff;
-    cursor: pointer;
-}
-
 .pixel-btn:hover {
     background: #9b7a52;
     border-color: #ffe9b4;
+}
+
+.pixel-btn {
+    cursor: pointer;
+    width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    margin: 15px;
+    background-color: #7a5f41;
+    border-left: 3px solid #d4b484;
+    border-top: 3px solid #d4b484;
+    border-right: 3px solid gray;
+    border-bottom: 3px solid gray;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1.1rem;
+    font-weight: 900;
+    outline: 2px solid black;
 }
